--- a/k8s-code/prod/app/deploy-webapp.yml
+++ b/k8s-code/prod/app/deploy-webapp.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
     - name: webapp
-      image: gvenkat/webapp1:latest
+      image: prasanthdocknet/webapp1:latest
       imagePullPolicy: Always
       ports:
         - containerPort: 8080
